# transformer

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindLIBLUA.cmake
doc/: commitapply.md  eventing.md  getparameternames.md  libtransformer_example1.c  libtransformer_example2.c  skeleton.map  system_architecture.xml  transformer_architecture.xml
generator/: dmParser.lua  dmdump.lua  generator.lua  generator.sh
generator/dm/: Dev-2.10.xml  Dev-2.11.xml  Dev-2.2.xml  Dev-2.8.xml  Dev-2.9.xml  IGD-1.14.xml  IGD-1.3.xml  IGD-1.4.xml  IGD-1.5.xml  IGD-1.6.xml  IGD-1.7.xml  IGD-1.8.xml
generator/dm/report/: cwmp-datamodel-1-0.xsd  cwmp-datamodel-1-1.xsd  cwmp-datamodel-1-2.xsd  cwmp-datamodel-1-3.xsd  cwmp-datamodel-1-4.xsd  cwmp-datamodel-1-5.xsd  tr-098-1-2-1-full.xml  tr-098-1-8-0-full.xml  tr-104-1-1-0-full.xml  tr-143-1-0-2-full.xml  tr-157-1-0-0-full.xml  tr-157-1-1-0-full.xml  tr-157-1-2-0-full.xml  tr-157-1-3-0-full.xml  tr-181-2-10-0-full.xml  tr-181-2-11-0-full.xml  tr-181-2-2-0-full.xml  tr-181-2-8-0-full.xml  tr-181-2-9-0-full.xml
lib/api/: libtransformer.h
lib/src/lua-datamodel/: datamodel-bck.lua
lib/src/syslog/: lsyslog.c
lib/src/tch_async/: async.c  async.h  execute.c  execute.h  tch_async.c
lib/src/transformer/: libtransformer.c
mappings/: Device.map
scripts/: internal_deps.lua
transformer/: alias.lua  api.lua  eventhor.lua  logger.lua  mapload.lua  msg.lua  msg_decode.lua  msg_encode.lua  navigation.lua  pathfinder.lua  persistency.lua  typecheck.lua  typestore.lua  xref.lua
transformer/mapper/: ubus.lua  ucihelper.lua  ucilist.lua
transformer/persistency/: db.lua
transformer/server/: main.lua
